--- a/order.html
+++ b/order.html
@@ -23,20 +23,19 @@
         </ul>
     </nav>
 
-
+    <img src="https://images.seeklogo.com/logo-png/16/1/whatsapp-logo-png_seeklogo-168310.png" width="60" height="60">
     <h2 class="Title">Fale conosco</h2>
-<form action="mailto:seuemail@dominio.com" method="post" enctype="text/plain">
-  <label for="nome">Nome:</label>
-  <input type="text" id="nome" name="nome" required>
+    <p>(38) 99866-05** </p>
+    
+<section class="form-section">
+  <form class="formulario" action="#" method="post">
+    <input type="text" name="nome" placeholder="Seu nome" required>
+    <input type="email" name="email" placeholder="Seu e-mail" required>
+    <textarea name="mensagem" rows="5" placeholder="Sua mensagem" required></textarea>
+    <button type="submit">Enviar</button>
+  </form>
+</section>
 
-  <label for="email">Email:</label>
-  <input type="email" id="email" name="email" required>
-
-  <label for="mensagem">Mensagem:</label>
-  <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
-
-  <button type="submit">Enviar</button>
-</form>
 
 
 <footer>
