--- a/about.html
+++ b/about.html
@@ -20,12 +20,22 @@
             <li><a href="order.html">ENCOMENDAS</a></li>
         </ul>
     </nav>
+ <section class="sobre-grid">
+    <div class="texto-sobre">
+        <h2>Sobre nós</h2>
+        <p>"O bordado apareceu como uma forma de hobby no tempo livre. Após produzir algumas peças, foi possível entender que a arte é uma forma de representar, contar histórias e exteriorizar sentimentos através de pontos. 
 
-    <h2 class="sobremim">O bordado apareceu como uma forma de hobby no tempo livre, após produzir algumas peças foi possível entender que a arte é uma forma de representar, contas histórias e exteriorizar sentimentos através de pontos. Com isso, percebi que seria interessante contar história de outras pessoas também, fazer parte de um momento especial e eternizar-los no tecido, e decidi fazer a página do Instagram e aceitar encomendas.</h1>
+        Com isso, percebi que seria interessante contar histórias de outras pessoas também, fazer parte de um momento especial e eternizá-los no tecido. Então decidi criar a página do Instagram e começar a aceitar encomendas."</p>
+    </div>
 
-
+    <div class="imagem-sobre">
+        <img src="https://i.imgur.com/n1zLBV1.jpeg" width="225"  alt="Bordado 1">
+        <img src="https://i.imgur.com/oNRNxiz.jpeg"   width="225"   alt="Bordado 2">
+    </div>
+ </section>
+ 
 <footer>
-        
+
     <nav>
         <ul class="rodapé">
             <a href="https://www.instagram.com/bordadosmariaf?igsh=MWE2cTNsZ2F5dGdmYw==" target="_blank">
