--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title> Bordadosmariaf </title>
+    <link rel="icon" href="https://png.pngtree.com/png-vector/20230823/ourmid/pngtree-monkey-favicon-by-canva-vector-png-image_6913197.png" type="image/png">
 </head>
 <body>
     
@@ -36,7 +37,7 @@
     <img src="https://i.imgur.com/n1a2zwI.jpeg" width=250 height=250 class=bordado3>
     <img src="https://i.imgur.com/LRAtrC7.jpeg" width=250 height=250 class=bordado4>
     <img src="https://i.imgur.com/c2i3ZaL.png" width=250 height=250 class=bordado5>
-    <img src="https://i.imgur.com/l7833nA.png" width=250 height=250 class=bordado6>
+    <img src="https://i.imgur.com/oNRNxiz.jpeg" width=250 height=250 class=bordado6>
     </div>
 
 
@@ -54,3 +55,4 @@
 
 </body>
 </html>
+
