--- a/order.html
+++ b/order.html
@@ -23,9 +23,8 @@
         </ul>
     </nav>
 
-    <img src="https://images.seeklogo.com/logo-png/16/1/whatsapp-logo-png_seeklogo-168310.png" width="60" height="60">
-    <h2 class="Title">Fale conosco</h2>
-    <p>(38) 99866-05** </p>
+    <h2 class="title">Fale conosco</h2>
+    <p class="subtitle">(38) 99**-**** </p>
     
 <section class="form-section">
   <form class="formulario" action="#" method="post">
