--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     <nav>
         <ul class="rodapé">
             <a href="https://www.instagram.com/bordadosmariaf?igsh=MWE2cTNsZ2F5dGdmYw==" target="_blank">
-                <img src="https://img.freepik.com/vetores-premium/logotipo-de-midia-social-de-contorno-preto_197792-2416.jpg?semt=ais_hybrid&w=740&q=80" alt="Instagram" class="logo-rodape">
+                <img src="https://static.vecteezy.com/system/resources/thumbnails/055/780/418/small/an-instagram-icon-on-a-black-background-free-png.png" alt="Instagram" class="logo-rodape">
         </ul>
     </nav>
 
