--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
         </ul>
     </nav>
 
+ <main>
     <section>
-    <h2 class="titulo">Bordando com amor e carinho</h2>
+    <h2 class="tituloindex">Bordando com amor e carinho</h2>
         <p>Cada bordado carrega uma lembrança, cada fio entrelaçado é um pedaço do amor que guardamos.</p>
             <p>Uma foto bordada tem o poder de eternizar momentos especiais!❤️🪡</p>
     </section>
@@ -39,10 +40,10 @@
     <img src="https://i.imgur.com/c2i3ZaL.png" width=250 height=250 class=bordado5>
     <img src="https://i.imgur.com/oNRNxiz.jpeg" width=250 height=250 class=bordado6>
     </div>
-
+  </main>
 
 <footer>
-        
+
     <nav>
         <ul class="rodapé">
             <a href="https://www.instagram.com/bordadosmariaf?igsh=MWE2cTNsZ2F5dGdmYw==" target="_blank">
@@ -51,6 +52,7 @@
     </nav>
 
 </footer>
+
 
 
 </body>
