--- a/index.html
+++ b/index.html
@@ -43,15 +43,17 @@
   </main>
 
 <footer>
-
-    <nav>
-        <ul class="rodapé">
-            <a href="https://www.instagram.com/bordadosmariaf?igsh=MWE2cTNsZ2F5dGdmYw==" target="_blank">
-                <img src="https://static.vecteezy.com/system/resources/thumbnails/055/780/418/small/an-instagram-icon-on-a-black-background-free-png.png" alt="Instagram" class="logo-rodape">
-        </ul>
-    </nav>
-
+  <nav>
+    <ul class="rodapé">
+      <li>
+        <a href="https://www.instagram.com/bordadosmariaf/" target="_blank">
+          <img src="https://static.vecteezy.com/system/resources/thumbnails/055/780/418/small/an-instagram-icon-on-a-black-background-free-png.png" alt="Instagram" class="logo-rodape">
+        </a>
+      </li>
+    </ul>
+  </nav>
 </footer>
+
 
 
 
