--- a/order.html
+++ b/order.html
@@ -15,16 +15,26 @@
     </header>
 
 
-     <nav>
+    <div>
         <ul class="menuprincipal">
             <li><a href="index.html">INICIO</a> </li>
             <li><a href="about.html">SOBRE</a></li>
             <li><a href="order.html">ENCOMENDAS</a></li>
         </ul>
-    </nav>
-
+    </div>
     <h2 class="title">Fale conosco</h2>
-    <p class="subtitle">(38) 99**-**** </p>
+
+<h3>
+        <nav>
+        <ul class="logo-order">
+            <li>
+            <a href="https://api.whatsapp.com/send?phone=5538998660511&text=Ol%C3%A1%2C+gostaria+de+realizar+um+or%C3%A7amento%21" target="_blank">
+                <img src="https://images.seeklogo.com/logo-png/16/1/whatsapp-logo-png_seeklogo-168310.png" alt="Whatsapp" class="logo">
+                </a>
+            </li>
+        </ul>
+    </nav>
+</h3>
     
 <section class="form-section">
   <form class="formulario" action="#" method="post">
@@ -36,15 +46,20 @@
 </section>
 
 
-
 <footer>
-    <nav>
-        <ul class="rodapé">
-            <a href="https://www.instagram.com/bordadosmariaf?igsh=MWE2cTNsZ2F5dGdmYw==" target="_blank">
-                <img src="https://static.vecteezy.com/system/resources/thumbnails/055/780/418/small/an-instagram-icon-on-a-black-background-free-png.png" alt="Instagram" class="logo-rodape">
-        </ul>
-    </nav>
+  <nav>
+    <ul class="rodapé">
+      <li>
+        <a href="https://www.instagram.com/bordadosmariaf/" target="_blank">
+          <img src="https://static.vecteezy.com/system/resources/thumbnails/055/780/418/small/an-instagram-icon-on-a-black-background-free-png.png" alt="Instagram" class="logo-rodape">
+        </a>
+      </li>
+    </ul>
+  </nav>
+</footer>
+
 
 </footer>
 </body>
+
 </html>
