--- a/about.html
+++ b/about.html
@@ -1,3 +1,89 @@
+Skip to content
+Navigation Menu
+Artmaoj
+bordadosmariaf.html
+
+Type / to search
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+Settings
+bordadosmariaf.html
+/
+about.html
+in
+main
+
+Edit
+
+Preview
+Indent mode
+
+Spaces
+Indent size
+
+4
+Line wrap mode
+
+No wrap
+Editing about.html file contents
+1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+11
+12
+13
+14
+15
+16
+17
+18
+19
+20
+21
+22
+23
+24
+25
+26
+27
+28
+29
+30
+31
+32
+33
+34
+35
+36
+37
+38
+39
+40
+41
+42
+43
+44
+45
+46
+47
+48
+49
+50
+51
+52
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -49,3 +135,7 @@
 </body>
 
 </html>
+
+
+Use Control + Shift + m to toggle the tab key moving focus. Alternatively, use esc then tab to move to the next interactive element on the page.
+Editing bordadosmariaf.html/about.html at main · Artmaoj/bordadosmariaf.html 
