--- a/about.html
+++ b/about.html
@@ -1,89 +1,3 @@
-Skip to content
-Navigation Menu
-Artmaoj
-bordadosmariaf.html
-
-Type / to search
-Code
-Issues
-Pull requests
-Actions
-Projects
-Wiki
-Security
-Insights
-Settings
-bordadosmariaf.html
-/
-about.html
-in
-main
-
-Edit
-
-Preview
-Indent mode
-
-Spaces
-Indent size
-
-4
-Line wrap mode
-
-No wrap
-Editing about.html file contents
-1
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-28
-29
-30
-31
-32
-33
-34
-35
-36
-37
-38
-39
-40
-41
-42
-43
-44
-45
-46
-47
-48
-49
-50
-51
-52
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -119,15 +33,17 @@ Editing about.html file contents
         <img src="https://i.imgur.com/oNRNxiz.jpeg"   width="225"   alt="Bordado 2">
     </div>
  </section>
- 
-<footer>
 
-    <nav>
-        <ul class="rodapé">
-            <a href="https://www.instagram.com/bordadosmariaf?igsh=MWE2cTNsZ2F5dGdmYw==" target="_blank">
-                <img src="https://static.vecteezy.com/system/resources/thumbnails/055/780/418/small/an-instagram-icon-on-a-black-background-free-png.png" alt="Instagram" class="logo-rodape">
-        </ul>
-    </nav>
+<footer>
+  <nav>
+    <ul class="rodapé">
+      <li>
+        <a href="https://www.instagram.com/bordadosmariaf/" target="_blank">
+          <img src="https://static.vecteezy.com/system/resources/thumbnails/055/780/418/small/an-instagram-icon-on-a-black-background-free-png.png" alt="Instagram" class="logo-rodape">
+        </a>
+      </li>
+    </ul>
+  </nav>
 
 </footer>
 
@@ -135,7 +51,3 @@ Editing about.html file contents
 </body>
 
 </html>
-
-
-Use Control + Shift + m to toggle the tab key moving focus. Alternatively, use esc then tab to move to the next interactive element on the page.
-Editing bordadosmariaf.html/about.html at main · Artmaoj/bordadosmariaf.html 
