--- a/index.html
+++ b/index.html
@@ -4,59 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title> Bordadosmariaf </title>
+    <title>Bordadosmariaf</title>
     <link rel="icon" href="https://png.pngtree.com/png-vector/20230823/ourmid/pngtree-monkey-favicon-by-canva-vector-png-image_6913197.png" type="image/png">
 </head>
 <body>
     
-    <header>
-        <img src="https://i.imgur.com/bQmKQgs.png" alt="figurinha" class="figurinha">
-        <h1>Bordados à mão</h1>
-            <p> Transformando suas ideias em peças únicas</p>
-    </header>
+<header>
+    <img src="https://i.imgur.com/bQmKQgs.png" alt="figurinha" class="figurinha">
+    <h1>Bordados à mão</h1>
+    <p>Transformando suas ideias em peças únicas</p>
+</header>
 
-   <nav>
-        <ul class="menuprincipal">
-            <li><a href="index.html">INICIO</a> </li>
-            <li><a href="about.html">SOBRE</a></li>
-            <li><a href="order.html">ENCOMENDAS</a></li>
-        </ul>
-    </nav>
+<nav>
+    <ul class="menuprincipal">
+        <li><a href="index.html">INÍCIO</a></li>
+        <li><a href="about.html">SOBRE</a></li>
+        <li><a href="order.html">ENCOMENDAS</a></li>
+    </ul>
+</nav>
 
- <main>
-    <section>
-    <h2 class="tituloindex">Bordando com amor e carinho</h2>
+<main>
+    <section class="h">
+        <h2 class="tituloindex">Bordando com amor e carinho</h2>
         <p>Cada bordado carrega uma lembrança, cada fio entrelaçado é um pedaço do amor que guardamos.</p>
-            <p>Uma foto bordada tem o poder de eternizar momentos especiais!❤️🪡</p>
+        <p>Uma foto bordada tem o poder de eternizar momentos especiais! ❤️🪡</p>
     </section>
 
     <section class="galeria">
-        <h2 class="txtgaleria">Galeira</h2>
-    <div class="imagens">
-    <img src="https://i.imgur.com/7pwAlrX.jpeg" width=250 height=250 class=bordado1>
-    <img src="https://i.imgur.com/vAVH1aH.jpeg" width=250 height=250 class=bordado2>
-    <img src="https://i.imgur.com/n1a2zwI.jpeg" width=250 height=250 class=bordado3>
-    <img src="https://i.imgur.com/LRAtrC7.jpeg" width=250 height=250 class=bordado4>
-    <img src="https://i.imgur.com/c2i3ZaL.png" width=250 height=250 class=bordado5>
-    <img src="https://i.imgur.com/oNRNxiz.jpeg" width=250 height=250 class=bordado6>
-    </div>
-  </main>
+        <h2 class="txtgaleria">Galeria</h2>
+        <div class="imagens">
+            <img src="https://i.imgur.com/7pwAlrX.jpeg" width="250" height="250" alt="Bordado 1">
+            <img src="https://i.imgur.com/vAVH1aH.jpeg" width="250" height="250" alt="Bordado 2">
+            <img src="https://i.imgur.com/n1a2zwI.jpeg" width="250" height="250" alt="Bordado 3">
+            <img src="https://i.imgur.com/LRAtrC7.jpeg" width="250" height="250" alt="Bordado 4">
+            <img src="https://i.imgur.com/c2i3ZaL.png" width="250" height="250" alt="Bordado 5">
+            <img src="https://i.imgur.com/oNRNxiz.jpeg" width="250" height="250" alt="Bordado 6">
+        </div>
+    </section>
+</main>
 
 <footer>
-  <nav>
-    <ul class="rodapé">
-      <li>
-        <a href="https://www.instagram.com/bordadosmariaf/" target="_blank">
-          <img src="https://static.vecteezy.com/system/resources/thumbnails/055/780/418/small/an-instagram-icon-on-a-black-background-free-png.png" alt="Instagram" class="logo-rodape">
-        </a>
-      </li>
-    </ul>
-  </nav>
+  <ul class="social-icons">
+    <li>
+      <a href="https://www.instagram.com/bordadosmariaf/" target="_blank">
+        <img src="https://static.vecteezy.com/system/resources/thumbnails/018/930/460/small/instagram-logo-instagram-icon-transparent-free-png.png" alt="Instagram" class="logo-rodape">
+      </a>
+    </li>
+    <li>
+      <a href="https://api.whatsapp.com/send?phone=5538998660511&text=Ol%C3%A1%2C+gostaria+de+realizar+um+or%C3%A7amento%21" target="_blank">
+        <img src="https://img.icons8.com/m_outlined/512/whatsapp--v2.png" alt="Whatsapp" class="logo">
+      </a>
+    </li>
+  </ul>
 </footer>
-
-
 
 
 </body>
 </html>
-
