--- a/about.html
+++ b/about.html
@@ -4,50 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title> Bordadosmariaf </title>
+    <title>Bordadosmariaf</title>
 </head>
 <body>
     <header>
         <img src="https://i.imgur.com/bQmKQgs.png" alt="figurinha" class="figurinha">
         <h1>Bordados à mão</h1>
-            <p> Conheça a história</p>
+        <p>Conheça a história</p>
     </header>
 
     <nav>
         <ul class="menuprincipal">
-            <li><a href="index.html">INICIO</a> </li>
+            <li><a href="index.html">INÍCIO</a></li>
             <li><a href="about.html">SOBRE</a></li>
             <li><a href="order.html">ENCOMENDAS</a></li>
         </ul>
     </nav>
- <section class="sobre-grid">
-    <div class="texto-sobre">
-        <h2>Sobre nós</h2>
-        <p>"O bordado apareceu como uma forma de hobby no tempo livre. Após produzir algumas peças, foi possível entender que a arte é uma forma de representar, contar histórias e exteriorizar sentimentos através de pontos. 
 
-        Com isso, percebi que seria interessante contar histórias de outras pessoas também, fazer parte de um momento especial e eternizá-los no tecido. Então decidi criar a página do Instagram e começar a aceitar encomendas."</p>
-    </div>
+    <section class="sobre-grid">
+        <div class="texto-sobre">
+            <h2>Sobre nós</h2>
+            <p>
+                "O bordado apareceu como uma forma de hobby no tempo livre. 
+                Após produzir algumas peças, foi possível entender que a arte é 
+                uma forma de representar, contar histórias e exteriorizar sentimentos através de pontos.
+            </p>
+            <p>
+                Com isso, percebi que seria interessante contar histórias de outras pessoas também, 
+                fazer parte de um momento especial e eternizá-los no tecido. 
+                Então decidi criar a página do Instagram e começar a aceitar encomendas."
+            </p>
+        </div>
 
-    <div class="imagem-sobre">
-        <img src="https://i.imgur.com/n1zLBV1.jpeg" width="225"  alt="Bordado 1">
-        <img src="https://i.imgur.com/oNRNxiz.jpeg"   width="225"   alt="Bordado 2">
-    </div>
- </section>
+        <div class="imagem-sobre">
+            <img src="https://i.imgur.com/n1zLBV1.jpeg" alt="Bordado 1">
+            <img src="https://i.imgur.com/oNRNxiz.jpeg" alt="Bordado 2">
+        </div>
+    </section>
 
 <footer>
-  <nav>
-    <ul class="rodapé">
-      <li>
-        <a href="https://www.instagram.com/bordadosmariaf/" target="_blank">
-          <img src="https://static.vecteezy.com/system/resources/thumbnails/055/780/418/small/an-instagram-icon-on-a-black-background-free-png.png" alt="Instagram" class="logo-rodape">
-        </a>
-      </li>
-    </ul>
-  </nav>
-
+  <ul class="social-icons">
+    <li>
+      <a href="https://www.instagram.com/bordadosmariaf/" target="_blank">
+        <img src="https://static.vecteezy.com/system/resources/thumbnails/018/930/460/small/instagram-logo-instagram-icon-transparent-free-png.png" alt="Instagram" class="logo-rodape">
+      </a>
+    </li>
+    <li>
+      <a href="https://api.whatsapp.com/send?phone=5538998660511&text=Ol%C3%A1%2C+gostaria+de+realizar+um+or%C3%A7amento%21" target="_blank">
+        <img src="https://img.icons8.com/m_outlined/512/whatsapp--v2.png" alt="Whatsapp" class="logo">
+      </a>
+    </li>
+  </ul>
 </footer>
 
-
 </body>
-
 </html>
