--- a/order.html
+++ b/order.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -17,24 +18,12 @@
 
     <div>
         <ul class="menuprincipal">
-            <li><a href="index.html">INICIO</a> </li>
+            <li><a href="index.html">INÍCIO</a> </li>
             <li><a href="about.html">SOBRE</a></li>
             <li><a href="order.html">ENCOMENDAS</a></li>
         </ul>
     </div>
     <h2 class="title">Fale conosco</h2>
-
-<h3>
-        <nav>
-        <ul class="logo-order">
-            <li>
-            <a href="https://api.whatsapp.com/send?phone=5538998660511&text=Ol%C3%A1%2C+gostaria+de+realizar+um+or%C3%A7amento%21" target="_blank">
-                <img src="https://images.seeklogo.com/logo-png/16/1/whatsapp-logo-png_seeklogo-168310.png" alt="Whatsapp" class="logo">
-                </a>
-            </li>
-        </ul>
-    </nav>
-</h3>
     
 <section class="form-section">
   <form class="formulario" action="#" method="post">
@@ -47,19 +36,21 @@
 
 
 <footer>
-  <nav>
-    <ul class="rodapé">
-      <li>
-        <a href="https://www.instagram.com/bordadosmariaf/" target="_blank">
-          <img src="https://static.vecteezy.com/system/resources/thumbnails/055/780/418/small/an-instagram-icon-on-a-black-background-free-png.png" alt="Instagram" class="logo-rodape">
-        </a>
-      </li>
-    </ul>
-  </nav>
+  <ul class="social-icons">
+    <li>
+      <a href="https://www.instagram.com/bordadosmariaf/" target="_blank">
+        <img src="https://static.vecteezy.com/system/resources/thumbnails/018/930/460/small/instagram-logo-instagram-icon-transparent-free-png.png" alt="Instagram" class="logo-rodape">
+      </a>
+    </li>
+    <li>
+      <a href="https://api.whatsapp.com/send?phone=5538998660511&text=Ol%C3%A1%2C+gostaria+de+realizar+um+or%C3%A7amento%21" target="_blank">
+        <img src="https://img.icons8.com/m_outlined/512/whatsapp--v2.png" alt="Whatsapp" class="logo">
+      </a>
+    </li>
+  </ul>
 </footer>
 
 
-</footer>
 </body>
 
 </html>
